# wrap-archive

./: Cargo.toml  README.md  SPEC.md  build.rs
src/: lib.rs
src/ffi/: mod.rs  read.rs
src/read/: archive.rs  comp_reader.rs  file.rs  mod.rs
src/shared/: archive_header.rs  compression.rs  directory.rs  encryption.rs  error.rs  file_header.rs  file_info.rs  file_metadata.rs  mod.rs
src/write/: comp_writer.rs  file.rs  hash_writer.rs  mod.rs  writer.rs
tests/: read.rs  write.rs
